--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -43,3 +43,9 @@ ul{
 li {
     list-style: none;
 }
+
+@media screen and (max-width: 600px) {
+    .presentationImage{
+        width: 70vw;
+    }
+  }
