--- a/style.css
+++ b/style.css
@@ -17,10 +17,15 @@
 
 .presentationImage{
     width: 40vw;
-    height: 100%;
+    height: 80%;
     object-fit: cover;
     margin: 0.5rem 0rem;
     padding: 3rem;
+    transition: all .2s ease-in-out;
+}
+
+.presentationImage:hover{
+    transform: scale(1.1);
 }
 
 .downloadImage{
@@ -44,7 +49,7 @@ li {
     list-style: none;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
     .presentationImage{
         width: 70vw;
     }
