--- a/style.css
+++ b/style.css
@@ -1,56 +1,82 @@
 *{
     margin: 0;
-    overflow-x: hidden;
+    overflow: hidden;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-
-.imgFlex {
+ul {
     display: flex;
-    flex-direction: column;
-    align-items:center;
-    height: 100%;
-    width: 100%;
-    position: relative;
+    justify-content: space-between;
+    background: thistle;
     padding: 3rem;
-}
-
-.presentationImage{
-    width: 40vw;
-    height: 80%;
-    object-fit: cover;
-    margin: 0.5rem 0rem;
-    padding: 3rem;
-    transition: all .2s ease-in-out;
-}
-
-.presentationImage:hover{
-    transform: scale(1.1);
-}
-
-.downloadImage{
-    width: 20vw;
-}
-
-.title{
-    font-size: 2rem;
-}
-
-p{
-    margin: 1rem 40rem 0 40rem;
-   
-}
-
-ul{
-    margin: 0 40rem 2rem 40rem;
 }
 
 li {
     list-style: none;
 }
 
+main{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 20vh 20vh 20vh 20vh;
+    grid-auto-flow: column;
+    justify-content: center;
+    align-content: center;		
+
+}
+.imageContainer{
+    grid-column: 1 /5;
+    grid-row: 1 / 3;
+    /* overflow: hidden; */
+    /* object-fit: scale-down; */
+    align-items: center;
+}
+
+.presentationImage{
+    width: 80vw;
+    object-fit: cover;
+    padding: 2rem;
+    /* transition: all .2s ease-in-out; */
+}
+
+.infoContainer{
+    grid-column: 1/ 3;
+    grid-row: 3/ 4;
+    place-self: center;
+}
+
+.linkContainer{
+    grid-column: 3/ 5;
+    grid-row: 3 / 4;
+    place-self: center;
+}
+
+.text{ 
+    padding: 6rem 7rem;
+}
+
+.downloadImage{
+    width: 20vw;
+    padding: 2rem 7rem;
+}
+
+
 @media screen and (max-width: 800px) {
-    .presentationImage{
-        width: 70vw;
+    .infoContainer{
+        grid-column: 1/ 5;
+        grid-row: 3/ 4;
+    }
+    .text{
+        padding: 2rem 6rem;
+    }
+
+    .linkContainer{
+        grid-column: 1/ 5;
+        grid-row: 4 / 5;
+    }
+
+    .downloadImage{
+        width: 40vw;
     }
   }
+  
