--- a/style.css
+++ b/style.css
@@ -7,12 +7,15 @@
 ul {
     display: flex;
     justify-content: space-between;
-    background: thistle;
-    padding: 1rem;
+    padding: 1rem 2rem;
 }
 
 li {
     list-style: none;
+}
+a {
+    text-decoration: none;
+    color: black;
 }
 
 main{
