--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ main{
 .imageContainer{
     grid-column: 1 /5;
     grid-row: 1 / 3;
-    /* overflow: hidden; */
     /* object-fit: scale-down; */
     align-items: center;
 }
@@ -46,6 +45,9 @@ main{
     grid-column: 1/ 3;
     grid-row: 3/ 4;
     place-self: center;
+  
+    background: thistle;
+    overflow: hidden;
 }
 
 .linkContainer{
